fixed tap on mobile bug for tags

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,10 @@ html {
   font-size: 16px;
 }
 
+.tap-transparent {
+  -webkit-tap-highlight-color: transparent;
+}
+
 .no-scrollbar {
   overflow: -moz-scrollbars-none;
   -ms-overflow-style: none;
